# project-polaris-academy

./: Makefile  README.md  make-r-vec  make-repl  prosjekt-polaris-academy.docx
doc/: README.md  authoring-notes.md  build-system.md  getting-started.md  r-vec.md
geogebra/: parametric-representation.ggb  project-polaris-template.ggb  quadrants_coloured.ggb  quadrants_coloured_with_vectors.ggb  vector-linear-combinations-and-span.ggb  vector-parametrization-2.ggb  vector-parametrization.ggb  vector-projections.ggb  vector-subtraction.ggb
images/source/: vectors-parametrization-003.xcf  vectors-subspace-example-quadrants.xcf
notes/: week_28_2026.md
notes/linear-algebra/: 01-khan-multivariable-functions.md.sos  01-khan-vectors-and-spaces.md  02-khan-linear-combinations-and-span.md  03-khan-linear-dependence-and-independence.md  04-khan-subspaces-and-the-basis-for-a-subspace.md  05-khan-vector-dot-and-cross-products.md  06-khan-matrices-for-solving-systems-by-elimination.md  07-khan-null-space-and-column-space.md  2026-07-15-discussion-about-paramteric-representation.md
pandoc/: book-title.tex  book.yaml  defaults.yaml  pagebreak.lua  polaris.tex
resources/: mathematics.md  mechanics.md  orbital-mechanics.md  robotics.md
software/r-vec/: CMakeLists.txt
software/r-vec/inc/: Parser.h  RVec.h
software/r-vec/include/: RVec.h
software/r-vec/src/: Parser.cpp  RVec.cpp  main.cpp
software/r-vec/tests/: ParserTests.cpp  RVecTests.cpp
software/vector-repl/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake
software/vector-repl/include/: RVector.h
software/vector-repl/src/: RVector.cpp  main.cpp
software/vector-repl/tests/: RVectorTests.cpp
